--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -21,6 +21,37 @@
 		font-family: Lexend, sans-serif;
 		font-weight: 600;
 	}
+
+	footer {
+		align-self: stretch;
+
+		&.empty .progress{
+			opacity: 0.5;
+			
+		}
+	}
+}
+
+.currentEpisode {
+	text-align: center;
+
+	img {
+		border-radius: 1.5rem;
+	}
+
+	strong {
+		display: block;
+		margin-top: 2rem;
+		font: 600 1.25rem Lexend, sans-serif;
+		line-height: 1.75rem;	
+	}
+	
+	span {
+		display: block;
+		margin-top: 1rem;
+		opacity: 0.6;
+		line-height: 1.5rem;	
+	}
 }
 
 .emptyPlayer {
@@ -36,8 +67,77 @@
 
 	padding: 4rem;
 	text-align: center;
-	
+
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+.progress {
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+	font-size: 0.875rem;
+
+	span {
+		display: inline-block;
+		width: 4rem;
+		text-align: center;
+	}
+
+	.slider {
+		flex: 1;
+
+		.emptySlider {
+			width: 100%;
+			height: 0.25rem;
+			background: var(--purple-300);
+			border-radius: 0.125rem;
+		}
+	}
+}
+
+.buttons {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 2.5rem;
+	gap: 1.5rem;
+
+	transition: filter 300ms;
+
+	button {
+		background: transparent;
+		border: 0;
+		font-size: 0;
+
+		&.playButton {
+			height: 4rem;
+			width: 4rem;
+			border-radius: 1rem;
+			background: var(--purple-300);
+
+			&:hover:not(:disabled) {
+				filter: brightness(0.95)
+
+			}
+		}
+
+		&:disabled {
+			cursor: default;
+			opacity: 0.5;
+		}
+
+		&.isActive {
+			filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg)
+		}
+
+		&.isActive:hover {
+			filter: brightness(0.6) invert(0.35) sepia(1) saturate(3) hue-rotate(100deg)
+		}
+
+		&:hover:not(:disabled) {
+			filter: brightness(0.75)
+		}
+	}
 }
